# hermes-webui

./: .env.docker.example  .env.example  .gitattributes  .gitignore  .graphify_cached.json  .graphify_uncached.txt  .permission_test  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE.md  BUGS.md  CAPY_RUNBOOK.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SETUP_PLAN.md  CONTRIBUTING.md  CONTRIBUTORS.md  CUSTOM_MODIFICATIONS.md  DESIGN.md  Dockerfile  EXOCRTX_MODIFICATIONS.md  HERMES.md  HERMES_FORK_PATCHES.md  IMPLEMENTATION_REPORT.md  LOCAL_MODIFICATIONS.md  MAINTAINING.md  NIXON_WORKSPACE_TEST_REPORT.md  ONBOARDING_PROVIDERS_PLAN.md  PLAN.md  PORTABILITY.md  PR_DESCRIPTION.md  PR_PERF_FIXES.md  README.en.md  README.md  README.tr.md  ROADMAP.md  SPRINTS.md  STREAMING_FADE_HANDOFF.md  TESTING.md  THEMES.md  (+49 more)
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
.hermes_patches/: pr_6239.applied
api/: __init__.py  _hermes_fork_config.py  _sqlite.py  _subprocess_compat.py  actions_http.py  agent_activity.py  agent_config_bridge.py  agent_health.py  agent_runtime.py  agent_sessions.py  agent_subprocess.py  agents_activity.py  agents_probe.py  artifact_references.py  artifacts.py  ask.py  audio_ws.py  auth.py  auth_oidc.py  auth_pam.py  background.py  background_process.py  bind_guard.py  bootstrap.py  branding.py  capy_compaction.py  capy_memory.py  capy_policy.py  clarify.py  (+128 more)
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/capabilities/: pet-window-drag.json
desktop-pet/src-tauri/icons/: icon.icns
desktop-pet/src-tauri/src/: main.rs
(+2273 files in other folders)
